--- a/src/components/MobilePhoneInput/index.css
+++ b/src/components/MobilePhoneInput/index.css
@@ -6,4 +6,8 @@
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 110%);
     width: 100%;
     padding: 30px 0px;
+    display: flex ;
+    flex-direction: column;
+    align-items: center;
+    margin:'0 5vw';
 }
