--- a/src/pages/AnimatedText/index.css
+++ b/src/pages/AnimatedText/index.css
@@ -22,7 +22,7 @@
   
   .animated-text {
     font-size: 35px;
-    margin: 200px 0px;
+    margin: 200px 10vh;
     color: #9ea7ae;
     text-align: center;
     font-family: "Matter",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
