--- a/src/pages/AnimatedText/index.css
+++ b/src/pages/AnimatedText/index.css
@@ -30,25 +30,19 @@
   
   .animated-text > span {
     display: block; /* Make span behave like a block for layout purposes */
-    opacity: 0; /* Start off invisible */
-    animation: slideUp 0.8s ease-out forwards; /* Apply the animation */
     margin:5px;
   }
   
-  .animated-text > span:nth-child(1) {
-    animation-delay: 0.5s;
+  .animated-text > span, .arrow-container {
+    opacity: 0;
   }
   
-  .animated-text > span:nth-child(2) {
-    animation-delay: 0.8s;
+  .slide-up {
+    animation: slideUp 0.8s ease-out forwards;
   }
   
-  .animated-text > span:nth-child(3) {
-    animation-delay: 1.1s;
-  }
-  
-  .animated-text > span:nth-child(4) {
-    animation-delay: 1.4s;
+  .slide-down {
+    animation: slideDown 0.8s ease-out forwards;
   }
   
   .animated-text > span > strong {
@@ -59,8 +53,6 @@
   .arrow-container {
     opacity: 0;
     margin: 75px 0px;
-    animation: slideDown 0.8s ease-out forwards;
-    animation-delay: 1.7s;
   }
   
   .arrow-container > img {
