--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 body{
     margin:0;
+    font-family: "Matter",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
